update game title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>みゃくぷよ</title>
+    <title>みゃくちぇいん</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -194,7 +194,7 @@
 </head>
 <body>
     <main>
-        <img src="img/logo.png" alt="みゃくぷよ！" id="game-logo">
+        <img src="img/logo.png" alt="みゃくちぇいん！" id="game-logo">
         <div id="game-container"></div>
 
         <!-- スマホ用コントロール -->
