add Google Analytics

--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>みゃくちぇいん</title>
+    <meta name="description" content="こみゃくを使った落ちものパズルゲーム">
+    <meta property="og:title" content="みゃくちぇいん！">
+    <meta property="og:description" content="こみゃくを使った落ちものパズルゲーム">
+    <meta property="og:image" content="https://inpw.jp/app/myakuchain/img/logo.png">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="みゃくちぇいん！">
+    <meta name="twitter:description" content="こみゃくを使った落ちものパズルゲーム">
+    <meta name="twitter:image" content="https://inpw.jp/app/myakuchain/img/logo.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.9.0/p5.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@700;900&display=swap" rel="stylesheet">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NKLF1PK4XK"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-NKLF1PK4XK');
+    </script>
+
     <style>
         * {
             margin: 0;
